--- a/src/Orient/Orient.Tests/Orient.Tests.csproj
+++ b/src/Orient/Orient.Tests/Orient.Tests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="DbRunner.cs" />
     <Compile Include="Graph\GraphClassesTests.cs" />
+    <Compile Include="Metadata\SQLMetadataTest.cs" />
     <Compile Include="Query\LoadRecordTests.cs" />
     <Compile Include="Query\SqlGenerateDeleteDocumentQueryTests.cs" />
     <Compile Include="Query\SqlGenerateDeleteVertexQueryTests.cs" />
@@ -102,7 +103,6 @@
       <Name>Orient.Client</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
