Enhanced support for automatically creating properties

--- a/src/Orient/Orient.Client/Orient.Client.csproj
+++ b/src/Orient/Orient.Client/Orient.Client.csproj
@@ -48,6 +48,7 @@
     <Compile Include="API\Query\OCreateVertexRecord.cs" />
     <Compile Include="API\Query\ORecordMetadata.cs" />
     <Compile Include="API\Query\OSqlCreateProperty.cs" />
+    <Compile Include="API\Query\OSqlSchema.cs" />
     <Compile Include="API\Types\IBaseRecord.cs" />
     <Compile Include="API\Types\OBaseRecord.cs" />
     <Compile Include="API\Types\OEdge.cs" />
